substrate/frame/support/test/tests/derive_impl_ui/attached_to_non_impl.stderr
error: expected `impl`
  --> tests/derive_impl_ui/attached_to_non_impl.rs:56:1
   |
56 | struct Something {}
   | ^^^^^^
